--- a/main/mainhome.html
+++ b/main/mainhome.html
@@ -61,11 +61,13 @@
             <h2>Top 5 absent</h2>
           </div>
           <div class="flip-card-back">
-              <h3>1-Bra'a Esam</h3>
+            
+            <!-- <span>zhode</span><span>1</span> -->
+              <!-- <h3>1-Bra'a Esam</h3>
               <h3>2-Karam Daneh</h3>
               <h3>3-Muhammed Naser</h3>
               <h3>4-Haneen Ghassan</h3>
-              <h3>5-Mohammad Alnuqeiti</h3>
+              <h3>5-Mohammad Alnuqeiti</h3> -->
           </div>
         </div>
     </div>
@@ -73,14 +75,14 @@
       <div class="flip-card2">
         <div class="flip-card2-inner">
           <div class="flip-card2-front">
-            <h2>worst assignment</h2>
+            <h2>best assignment.(on the time)</h2>
           </div>
           <div class="flip-card2-back">
-            <h3>1-Obaida Al-thunibat</h3>
+            <!-- <h3>1-Obaida Al-thunibat</h3>
             <h3>2-abdelmajied abusuliman</h3>
             <h3>3-Ahmad Zytoon</h3>
             <h3>4-Asem Yassen</h3>
-            <h3>5-zohde tamimi</h3>
+            <h3>5-zohde tamimi</h3> -->
           </div>
         </div>
       </div>
